--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start --clear",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "node24": "bash ./use-node24.sh"
   },
@@ -17,6 +17,7 @@
     "@types/react": "~19.1.10",
     "date-fns": "^3.0.0",
     "expo": "~54.0.0",
+    "expo-dev-client": "~6.0.17",
     "expo-notifications": "~0.32.12",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
